디자인 수정

--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -26,6 +26,7 @@
         }
         body {
             font-family: 'DungGeunMo-Regular';
+            background-color: #ddd9d3;
             height: 100%;
         }
     </style>
