--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,7 +13,7 @@
             <img src="https://cdn-icons-png.flaticon.com/128/4966/4966345.png" alt="" width="40" style="margin-left: 10px; margin-right: -8px;">
                 <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -9px">댕</b>
                 <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">댕</b>
-                <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">월</b>
+                <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -9px">월</b>
                 <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: 5px">드</b>
         </a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03" style="white-space: nowrap;">
