--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -14,6 +14,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
         @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap");
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@500&display=swap');
+        @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
 
         html, body {
             overflow-x:hidden;
@@ -25,84 +26,117 @@
         .margin{
             margin-bottom: 30px;
         }
-        h1 {
-          font-family: "Oswald", sans-serif;
-          font-weight: 300;
-          color: #252923;
-          width: 100%;
-          padding: 50px 0;
-          background: #fff;
-          text-align: center;
-          text-transform: uppercase;
-          letter-spacing: 2px;
-          font-weight: 100;
-          margin-bottom: 32px;
+
+        *
+        {
+            -webkit-box-sizing: border-box;
+                    box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
-        .cards {
-          display: grid;
-          grid-template-columns: repeat(3, 1fr);
-          grid-gap: 20px;
-          width: 80%;
-          margin: 0 auto;
+
+        a
+        {
+            text-decoration: none;
         }
-        .card {
-          background: #fff;
-          border: 2px solid #928c8c;
-          border-radius: 8px;
-          transition: all 300ms ease;
+
+        .product-card {
+            font-family: 'IBM Plex Sans KR', sans-serif;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 30px;
+            width: 80%;
+            margin: 120px auto;
+            background: #ddd9d3;
+            box-shadow: 0 0 0 #dfdfdf;
         }
-        .card:hover {
-          transform: scale(1.008) translateY(-5px);
-          box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15), 0 1px 2px 0 rgba(0, 0, 0, 0.16);
+
+        .product-tumb {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 400px;
+            padding: 50px;
         }
-        .card__img {
-          height: 150px;
-          background-size: cover;
-          background-position: 50% 70%;
+
+        .product-tumb img {
+            max-width: 100%;
+            max-height: 100%;
         }
-        .card__body {
-          padding: 20px 32px 0;
+
+        .product-details {
+            padding: 30px;
         }
-        .card__title {
-          color: #252923;
-          text-transform: uppercase;
-          font-weight: 600;
+
+        .product-catagory {
+            display: block;
+            font-size: 12px;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: #ccc;
+            margin-bottom: 18px;
         }
-        .card__footer {
-          padding: 10px 32px 20px;
-          margin-top: 30px;
-          display: flex;
-          justify-content: space-between;
+
+        .product-details h4 a {
+            font-weight: 500;
+            display: block;
+            margin-bottom: 18px;
+            text-transform: uppercase;
+            color: #363636;
+            text-decoration: none;
+            transition: 0.3s;
         }
-        .card__buy {
-          background: #424c3d;
-          color: #fff;
-          padding: 5px 10px;
-          border-radius: 6px;
-          font-weight: 500;
-          text-transform: uppercase;
-          font-size: 14px;
-          transition: all 150ms ease;
-          display: flex;
-          align-items: center;
+
+        .product-details h4 a:hover {
+            color: #fbb72c;
         }
-        .card__buy i {
-          font-size: 12px;
-          margin-left: 8px;
-          transition: all 200ms ease;
+
+        .product-details p {
+            font-size: 15px;
+            line-height: 22px;
+            margin-bottom: 18px;
+            color: #999;
         }
-        .card__buy:hover {
-          cursor: pointer;
-          background: #363e32;
+
+        .product-bottom-details {
+            overflow: hidden;
+            border-top: 1px solid #eee;
+            padding-top: 20px;
         }
-        .card__buy:hover i {
-          transform: translateX(2px);
+
+        .product-bottom-details div {
+            float: left;
+            width: 50%;
         }
-        a:hover{
-            text-decoration:none;
+
+        .product-price {
+            font-size: 18px;
+            color: #fbb72c;
+            font-weight: 600;
         }
-        .center{
-            text-align:center;
+
+        .product-price small {
+            font-size: 80%;
+            font-weight: 400;
+            text-decoration: line-through;
+            display: inline-block;
+            margin-right: 5px;
+        }
+
+        .product-links {
+            text-align: right;
+        }
+
+        .product-links a {
+            display: inline-block;
+            margin-left: 5px;
+            color: #e1e1e1;
+            transition: 0.3s;
+            font-size: 17px;
+        }
+
+        .product-links a:hover {
+            color: #fbb72c;
         }
 
         .wrapper {
@@ -345,21 +379,65 @@
             filter: blur(0);
           }
         }
+
         .search-box {
-            border: 2px grey;
-            position: sticky;
-            border-radius: 5px;
-            left: 600px;
-            height: -20px;
-            padding: 20px;
+          width: 100%;
+          max-width: 31.25rem;
+          margin: 10rem auto;
+          transform: translate(1%, 160%);
         }
-        .menu {
-          display: inline-block;
-          -webkit-box-shadow: 0 0 70px #fff;
-          -moz-box-shadow: 0 0 70px #fff;
-          box-shadow: 0 0 70px #fff;
-          margin-left: 90px;
+
+        .label {
+          font-size: 1rem;
+          font-weight: 400;
           text-align: center;
+          text-transform: uppercase;
+          letter-spacing: +1.3px;
+          margin-bottom: 1rem;
+        }
+
+        .searchBar {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+        }
+
+        #searchQueryInput {
+          width: 100%;
+          height: 2.8rem;
+          background: #f5f5f5;
+          outline: none;
+          border: none;
+          border-radius: 1.625rem;
+          padding: 0 3.5rem 0 1.5rem;
+          font-size: 1rem;
+        }
+
+        #searchQuerySubmit {
+          width: 3.5rem;
+          height: 2.8rem;
+          margin-left: -3.5rem;
+          background: none;
+          border: none;
+          outline: none;
+        }
+
+        #searchQuerySubmit:hover {
+          cursor: pointer;
+        }
+
+        .menu {
+          position: sticky;
+          -webkit-box-shadow: 0 0 0px #fff;
+          -moz-box-shadow: 0 0 0px #fff;
+          box-shadow: 0 0 0px #fff;
+          margin-left: 120px;
+          max-width: 40rem;
+          text-align: center;
+          transform: translate(53%, -400%);
+          width: auto;
+          height: auto;
         }
 
         /* a little "umph" */
@@ -396,7 +474,7 @@
         }
 
         .mini-nav {
-          position: relative;
+          position: sticky;
           background: #BBDEFB;
           background-image: -webkit-linear-gradient(bottom, #2B2B2B 7%, #333333 100%);
           background-image: -moz-linear-gradient(bottom, #2B2B2B 7%, #333333 100%);
@@ -525,7 +603,7 @@
         @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:900");
 
         h2 {
-            font: 900 80px/.75 'Source Sans Pro', Arial, sans-serif; text-transform: uppercase; color: #bfbd9c; text-align: center; letter-spacing: -6px;
+            font: 900 80px/.75 'Source Sans Pro', Arial, sans-serif; text-transform: uppercase; color: #e9a23e; text-align: center; letter-spacing: -6px;
             text-shadow:
                      1px  1px 1px #66644d,
 					 2px  2px 1px #66644d,
@@ -560,11 +638,13 @@
         }
 
         .logo {
-          align-items: center;
-          display: flex;
-          margin-left: 70px;
-          flex-basis: content;
-          flex-direction: column;
+           align-items: center;
+           display: flex;
+           margin-left: 50px;
+           margin-top: 300px;
+           margin-bottom: 20px;
+           flex-basis: content;
+           flex-direction: column;
         }
 
         .logo > div {
@@ -721,6 +801,11 @@
 	        top: -155px;
         }
 
+        .h6 {
+            position : relative;
+	        left: 560px;
+	        top: 50px;
+        }
     </style>
 </th:block>
 
@@ -785,15 +870,25 @@
         </div>
     </div>
 
-    <div class="search-box" style="float:left;">
-        <h6 style="text-align:right; color:red; font-size: 15px; margin-right: 90px; margin-top: 350px; margin-bottom: 20px;">▼ 찾으시는 상품을 검색해보세요!</h6>
+    <div class="search-box">
+        <div class="label">찾으시는 상품을 검색해보세요!</div>
         <form class="form-inline my-2 my-lg-0" th:action="@{/}" method="get">
-            <input name="searchQuery" class="form-control mr-sm-2" type="search"  placeholder="ex) 강아지 하네스" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <div class="searchBar">
+            <input id="searchQueryInput" type="search" name="searchQuery" placeholder="ex) 강아지 하네스" aria-label="Search" />
+            <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
+                <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path fill="#666666" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                </svg>
+            </button>
+        </div>
         </form>
     </div>
 
-    <div class="menu" style="position:sticky;">
+    <input type="hidden" name="searchQuery" th:value="${itemSearchDto.searchQuery}">
+    <div th:if="${not #strings.isEmpty(itemSearchDto.searchQuery)}" class="center">
+        <p class="h6 font-weight-bold" th:text="${itemSearchDto.searchQuery} + ' 검색결과는 다음과 같습니다'"></p>
+    </div>
+
+    <div class="menu" style="position:relative;">
         <div class="sticker">
             <img src="https://cdn-icons-png.flaticon.com/256/7286/7286620.png">
         </div>
@@ -846,24 +941,26 @@
         </nav>
     </div>
 
-    <input type="hidden" name="searchQuery" th:value="${itemSearchDto.searchQuery}">
-    <div th:if="${not #strings.isEmpty(itemSearchDto.searchQuery)}" class="center">
-        <p class="h3 font-weight-bold" th:text="${itemSearchDto.searchQuery} + '검색 결과'"></p>
-    </div>
-
-    <div class="cards">
+    <div class="product-card">
         <th:block th:each="item, status: ${items.getContent()}">
-        <div class="card">
+          <div class="card">
             <a th:href="'/item/' +${item.id}" class="text-dark">
-                <img th:src="${item.imgUrl}" class="card-img-top" th:alt="${item.itemNm}" height="400">
-            <div class="card__body">
-                <h4 class="card-title">[[${item.itemNm}]]</h4>
-                <p class="card-text">[[${item.itemDetail}]]</p>
-            </div>
-            <div class="card__footer">
-                <h3 class="card-title text-danger"> &#8361; [[${item.price}]]</h3>
-            </div>
+                <div class="product-tumb">
+                    <img th:src="${item.imgUrl}" class="card-img-top" th:alt="${item.itemNm}" height="400">
+                </div>
             </a>
+          <div class="product-details">
+            <span class="product-catagory">강아지 용품</span>
+                <h4><a th:href="'/item/' +${item.id}" class="text-dark">[[${item.itemNm}]]</a></h4>
+                <p>[[${item.itemDetail}]]</p>
+            <div class="product-bottom-details">
+                <div class="product-price">&#8361; [[${item.price}]]</div>
+                <div class="product-links">
+                    <a href=""><i class="fa fa-heart"></i></a>
+                    <a href=""><i class="fa fa-shopping-cart"></i></a>
+                </div>
+            </div>
+          </div>
         </div>
         </th:block>
     </div>
