상품 카테고리 항목 추가

--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -156,6 +156,7 @@
             <span th:unless="${item.itemSellStatus == T(com.shop.constant.ItemSellStatus).SELL}" class="badge btn-danger mgb-15" >
                 품절
             </span>
+            <div class="h6" th:text="${item.itemCategory}"></div>
             <div class="h4" th:text="${item.itemNm}"></div>
             <hr class="my-4">
 
