itemSearchForm 생성 & 기타 수정 작업

--- a/src/main/resources/templates/item/itemMng.html
+++ b/src/main/resources/templates/item/itemMng.html
@@ -18,10 +18,12 @@
             var searchDateType = $("#searchDateType").val();
             var searchSellStatus = $("#searchSellStatus").val();
             var searchBy = $("#searchBy").val();
+            var searchItemCategory = $("#searchItemCategory").val();
             var searchQuery = $("#searchQuery").val();
 
             location.href="/admin/items/" + page + "?searchDateType=" + searchDateType
             + "&searchSellStatus=" + searchSellStatus
+            + "&searchItemCategory=" + searchItemCategory
             + "&searchBy=" + searchBy
             + "&searchQuery=" + searchQuery;
         }
@@ -40,8 +42,8 @@
 
 <div layout:fragment="content">
 
-    <form th:action="@{'/admin/items/' + ${items.number}}" role="form" method="get" th:object="${items}">
-        <table class="table">
+    <form th:action="@{'/admin/items/' + ${items.number}}" role="form" method="get" th:object="${items}" style="margin-top:50px;">
+        <table class="table table-hover">
             <thead>
             <tr>
                 <td>상품아이디</td>
@@ -65,8 +67,8 @@
             </tr>
             </tbody>
         </table>
-
-        <div th:with="start=${(items.number/maxPage)*maxPage + 1}, end=(${(items.totalPages == 0) ? 1 : (start + (maxPage - 1) < items.totalPages ? start + (maxPage - 1) : items.totalPages)})" >
+        <br>
+        <div th:with="start=${(items.number/maxPage)*maxPage + 1}, end=(${(items.totalPages == 0) ? 1 : (start + (maxPage - 1) < items.totalPages ? start + (maxPage - 1) : items.totalPages)})" style="margin-top:200px;">
             <ul class="pagination justify-content-center">
 
                 <li class="page-item" th:classappend="${items.first}?'disabled'">
@@ -100,6 +102,14 @@
                 <option value="">판매상태(전체)</option>
                 <option value="SELL">판매</option>
                 <option value="SOLD_OUT">품절</option>
+            </select>
+            <select th:field="*{searchItemCategory}" class="form-control" style="width:auto;">
+                <option value="">카테고리</option>
+                <option value="의류">의류</option>
+                <option value="강아지 용품">강아지 용품</option>
+                <option value="장난감">장난감</option>
+                <option value="음식">음식</option>
+                <option value="기타">기타</option>
             </select>
             <select th:field="*{searchBy}" class="form-control" style="width:auto;">
                 <option value="itemNm">상품명</option>
