--- a/src/main/resources/templates/item/itemSearchForm.html
+++ b/src/main/resources/templates/item/itemSearchForm.html
@@ -4,12 +4,12 @@
       layout:decorate="~{layouts/layout1}">
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
 </head>
 
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
-    <style>
+  <style>
         @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
         @import url(https://fonts.googleapis.com/css?family=Raleway);
         @import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
@@ -642,7 +642,6 @@
            align-items: center;
            display: flex;
            margin-left: 50px;
-           margin-top: 300px;
            margin-bottom: 20px;
            flex-basis: content;
            flex-direction: column;
@@ -812,184 +811,161 @@
 
 <div layout:fragment="content">
   <body style="overflow-x: hidden">
-    <header class="py-5">
-        <div class="image-wrap">
-            <div class="image-thumbnail">
-            </div>
-             <div class="text">
-                    <span style="font-size: 70px">Welcome to</span>
-                    <span style="font-size: 70px">"Daeng Daeng</span>
-                    <span style="font-size: 70px"> World!"</span>
-                    <br>
-                    <span style="font-size: 25px">우리 곁에는 항상</span>
-                    <span style="font-size: 25px">장난끼 많지만</span>
-                    <span style="font-size: 25px">그 모습마저도</span>
-                    <span style="font-size: 25px">사랑스러운</span>
-                    <span style="font-size: 25px">친구들이 있죠.</span>
-                    <br>
-                    <span style="font-size: 25px">댕댕월드는</span>
-                    <span style="font-size: 25px">사람과 강아지 모두가</span>
-                    <span style="font-size: 25px">만족할만한</span>
-                    <span style="font-size: 25px">최상의 상품을</span>
-                    <span style="font-size: 25px">판매합니다.</span>
-                    <br>
-                    <span style="font-size: 25px">사랑하는</span>
-                    <span style="font-size: 25px">강아지와 좋은 추억을 만들어보세요.</span>
-             </div>
-        </div>
-    </header>
-
-    <h2>New<br>Update</h2>
-
-    <div class="wrapper">
-        <th:block th:each="item, status: ${items.getContent()}" th:if="${status.first} == true">
-            <div class="product-img" style="float:left">
-                    <img th:src="${item.imgUrl}" class="card-img-top" th:alt="${item.itemNm}" height="420" width="327">
-            </div>
-                    <div class="product-info" style="float:left">
-                      <div class="product-text" style="float:left">
-                        <div class="product-title">[[${item.itemNm}]]</div>
-                        <div class="product-category">[[${item.itemCategory}]]</div>
-                        <p class="card-text">[[${item.itemDetail}]]</p>
-                      </div>
-                      <div class="product-price-btn">
-                          <p class="price-tag">[[${item.price}]] won</p>
-                          <a th:href="'/item/' +${item.id}" class="text-dark">
-                            <button type="button">More Detail</button>
-                          </a>
-                      </div>
-            </div>
-        </th:block>
-    </div>
-
-    <div class="logo">
-        <div>
-            <h1>
-                <span data-text="댕댕">댕댕</span><br>
-                <span data-text="월드">월드</span>
-            </h1>
-        </div>
-    </div>
-
-    <div class="menu" style="position:relative;">
-        <div class="sticker">
-            <img src="https://cdn-icons-png.flaticon.com/256/7286/7286620.png">
-        </div>
-        <div class="sticker2">
-            <img src="https://cdn-icons-png.flaticon.com/256/5965/5965356.png">
-        </div>
+  <header class="py-5">
+    <div class="image-wrap">
+      <div class="image-thumbnail">
+      </div>
+      <div class="text">
+        <span style="font-size: 70px">Welcome to</span>
+        <span style="font-size: 70px">"Daeng Daeng</span>
+        <span style="font-size: 70px"> World!"</span>
         <br>
-        <span class="decor"></span>
-        <nav class="mini-nav">
-            <ul class="primary">
-                <li>
-                    <a href="/search/item" style="color:white">강아지 의류</a>
-                    <ul class="sub">
-                        <li><a href="">목줄 & 하네스</a></li>
-                        <li><a href="">상하의</a></li>
-                        <li><a href="">신발</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="" style="color:white">강아지 용품</a>
-                    <ul class="sub">
-                        <li><a href="">하우스</a></li>
-                        <li><a href="">배변판</a></li>
-                        <li><a href="">밥그릇</a></li>
-                        <li><a href="">목욕용품</a></li>
-                        <li><a href="">켄넬</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="" style="color:white">장난감</a>
-                    <ul class="sub">
-                        <li><a href="">노즈워크</a></li>
-                        <li><a href="">공</a></li>
-                        <li><a href="">터그놀이 장난감</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="" style="color:white">사료</a>
-                    <ul class="sub">
-                        <li><a href="">습식</a></li>
-                        <li><a href="">건식</a></li>
-                        <li><a href="">소프트</a></li>
-                        <li><a href="">껌</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="" style="color:white">etc</a>
-                </li>
-            </ul>
-        </nav>
+        <span style="font-size: 25px">우리 곁에는 항상</span>
+        <span style="font-size: 25px">장난끼 많지만</span>
+        <span style="font-size: 25px">그 모습마저도</span>
+        <span style="font-size: 25px">사랑스러운</span>
+        <span style="font-size: 25px">친구들이 있죠.</span>
+        <br>
+        <span style="font-size: 25px">댕댕월드는</span>
+        <span style="font-size: 25px">사람과 강아지 모두가</span>
+        <span style="font-size: 25px">만족할만한</span>
+        <span style="font-size: 25px">최상의 상품을</span>
+        <span style="font-size: 25px">판매합니다.</span>
+        <br>
+        <span style="font-size: 25px">사랑하는</span>
+        <span style="font-size: 25px">강아지와 좋은 추억을 만들어보세요.</span>
+      </div>
     </div>
+  </header>
 
-    <div class="search-box">
-        <div class="label">찾으시는 상품을 검색해보세요!</div>
-        <form class="form-inline my-2 my-lg-0" th:action="@{/search}" method="get">
-        <div class="searchBar">
-            <input id="searchQueryInput" type="search" name="searchQuery" placeholder="ex) 강아지 하네스" aria-label="Search" />
-            <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
-                <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path fill="#666666" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
-                </svg>
-            </button>
-        </div>
-        </form>
+  <div class="logo">
+    <div>
+      <h1>
+        <span data-text="댕댕">댕댕</span><br>
+        <span data-text="월드">월드</span>
+      </h1>
     </div>
+  </div>
 
-    <input type="hidden" name="searchQuery" th:value="${itemSearchDto.searchQuery}">
-    <div th:if="${not #strings.isEmpty(itemSearchDto.searchQuery)}" class="center">
-        <p class="h6 font-weight-bold" th:text="${itemSearchDto.searchQuery} + ' 검색결과는 다음과 같습니다'"></p>
+  <div class="menu" style="position:relative;">
+    <div class="sticker">
+      <img src="https://cdn-icons-png.flaticon.com/256/7286/7286620.png">
     </div>
+    <div class="sticker2">
+      <img src="https://cdn-icons-png.flaticon.com/256/5965/5965356.png">
+    </div>
+    <br>
+    <span class="decor"></span>
+    <nav class="mini-nav">
+      <ul class="primary">
+        <li>
+          <a href="" style="color:white">강아지 의류</a>
+          <ul class="sub">
+            <li><a href="">목줄 & 하네스</a></li>
+            <li><a href="">상하의</a></li>
+            <li><a href="">신발</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="" style="color:white">강아지 용품</a>
+          <ul class="sub">
+            <li><a href="">하우스</a></li>
+            <li><a href="">배변판</a></li>
+            <li><a href="">밥그릇</a></li>
+            <li><a href="">목욕용품</a></li>
+            <li><a href="">켄넬</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="" style="color:white">장난감</a>
+          <ul class="sub">
+            <li><a href="">노즈워크</a></li>
+            <li><a href="">공</a></li>
+            <li><a href="">터그놀이 장난감</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="" style="color:white">사료</a>
+          <ul class="sub">
+            <li><a href="">습식</a></li>
+            <li><a href="">건식</a></li>
+            <li><a href="">소프트</a></li>
+            <li><a href="">껌</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="" style="color:white">etc</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
-    <div class="product-card">
-        <th:block th:each="item, status: ${items.getContent()}">
-          <div class="card">
-            <a th:href="'/item/' +${item.id}" class="text-dark">
-                <div class="product-tumb">
-                    <img th:src="${item.imgUrl}" class="card-img-top" th:alt="${item.itemNm}" height="400">
-                </div>
-            </a>
-          <div class="product-details">
-            <span class="product-catagory">[[${item.itemCategory}]]</span>
-                <h4><a th:href="'/item/' +${item.id}" class="text-dark">[[${item.itemNm}]]</a></h4>
-                <p>[[${item.itemDetail}]]</p>
-            <div class="product-bottom-details">
-                <div class="product-price">&#8361; [[${item.price}]]</div>
-                <div class="product-links">
-                    <a href=""><i class="fa fa-heart"></i></a>
-                    <a href=""><i class="fa fa-shopping-cart"></i></a>
-                </div>
+  <div class="search-box">
+    <div class="label">찾으시는 상품을 검색해보세요!</div>
+    <form class="form-inline my-2 my-lg-0" th:action="@{/search}" method="get">
+      <div class="searchBar">
+        <input id="searchQueryInput" type="search" name="searchQuery" placeholder="ex) 강아지 하네스" aria-label="Search" />
+        <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
+          <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path fill="#666666" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+          </svg>
+        </button>
+      </div>
+    </form>
+  </div>
+
+  <input type="hidden" name="searchQuery" th:value="${itemSearchDto.searchQuery}">
+  <div th:if="${not #strings.isEmpty(itemSearchDto.searchQuery)}" class="center">
+    <p class="h6 font-weight-bold" th:text="${itemSearchDto.searchQuery} + ' 검색결과는 다음과 같습니다'"></p>
+  </div>
+
+  <div class="product-card">
+    <th:block th:each="item, status: ${items.getContent()}">
+      <div class="card">
+        <a th:href="'/item/' +${item.id}" class="text-dark">
+          <div class="product-tumb">
+            <img th:src="${item.imgUrl}" class="card-img-top" th:alt="${item.itemNm}" height="400">
+          </div>
+        </a>
+        <div class="product-details">
+          <span class="product-catagory">[[${item.itemCategory}]]</span>
+          <h4><a th:href="'/item/' +${item.id}" class="text-dark">[[${item.itemNm}]]</a></h4>
+          <p>[[${item.itemDetail}]]</p>
+          <div class="product-bottom-details">
+            <div class="product-price">&#8361; [[${item.price}]]</div>
+            <div class="product-links">
+              <a href=""><i class="fa fa-heart"></i></a>
+              <a href=""><i class="fa fa-shopping-cart"></i></a>
             </div>
           </div>
         </div>
-        </th:block>
-    </div>
-
-    <br>
-    <br>
-    <div th:with="start=${(items.number/maxPage)*maxPage + 1}, end=(${(items.totalPages == 0) ? 1 : (start + (maxPage - 1) < items.totalPages ? start + (maxPage - 1) : items.totalPages)})" >
-        <ul class="pagination justify-content-center">
-
-            <li class="page-item" th:classappend="${items.number eq 0}?'disabled':''">
-                <a th:href="@{'/' + '?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${items.number-1}}" aria-label='Previous' class="page-link">
-                    <span aria-hidden='true'>Previous</span>
-                </a>
-            </li>
-
-            <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${items.number eq page-1}?'active':''">
-                <a th:href="@{'/' +'?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${page-1}}" th:inline="text" class="page-link">[[${page}]]</a>
-            </li>
-
-            <li class="page-item" th:classappend="${items.number+1 ge items.totalPages}?'disabled':''">
-                <a th:href="@{'/' +'?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${items.number+1}}" aria-label='Next' class="page-link">
-                    <span aria-hidden='true'>Next</span>
-                </a>
-            </li>
-        </ul>
-    </div>
-  </body>
+      </div>
+    </th:block>
   </div>
+
+  <br>
+  <br>
+  <div th:with="start=${(items.number/maxPage)*maxPage + 1}, end=(${(items.totalPages == 0) ? 1 : (start + (maxPage - 1) < items.totalPages ? start + (maxPage - 1) : items.totalPages)})" >
+    <ul class="pagination justify-content-center">
+
+      <li class="page-item" th:classappend="${items.number eq 0}?'disabled':''">
+        <a th:href="@{'/' + '?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${items.number-1}}" aria-label='Previous' class="page-link">
+          <span aria-hidden='true'>Previous</span>
+        </a>
+      </li>
+
+      <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${items.number eq page-1}?'active':''">
+        <a th:href="@{'/' +'?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${page-1}}" th:inline="text" class="page-link">[[${page}]]</a>
+      </li>
+
+      <li class="page-item" th:classappend="${items.number+1 ge items.totalPages}?'disabled':''">
+        <a th:href="@{'/' +'?searchQuery=' + ${itemSearchDto.searchQuery} + '&page=' + ${items.number+1}}" aria-label='Next' class="page-link">
+          <span aria-hidden='true'>Next</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+  </body>
+</div>
 </div>
 
 </html>
